change dates type from Time to String
